# ManimPango

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  NEWS.rst  README.md  environment.yml  meson.build  meson_options.txt  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  test.py  tox.ini
.github/: CODEOWNERS  release-drafter.yml
.github/workflows/: build.yml  codeql.yml  lint.yml  release-drafter.yml  tests.yml
docs/: Makefile  RELEASE.rst  building.rst  conf.py  environment.yml  examples.rst  index.rst  installation.rst  integration.rst  news.rst  reference.rst  requirements.txt
docs/_templates/autosummary/: class.rst  module.rst
manimglpango/: cairo.pxd  cmanimpango.pyx  pango.pxd  register_font.pxd
manimpango/: __init__.py  _dep_cmanimpango.pxd  _dep_cmanimpango.pyx  _distributor_init.py  _manimpango.pxd  _manimpango.pyx  _version.py  attributes.pyx  buffer.pxi  cairo.pxd  cmanimpango.pxd  cmanimpango.pyx  color.pyx  enums.pyx  exceptions.py  formatted_string.py  glib.pxd  meson.build  pango.pxd  register_font.pxd  register_font.pyx  utils.py
manimpango/attributes/: __init__.py  _attributes.pyi  attributes.pxi  attributes.pyx
manimpango/bufferproxy/: bufferproxy.pxd  bufferproxy.pyx
manimpango/font_manager/: __init__.py  _register_font.pxd  _register_font.pyi  _register_font.pyx
manimpango/fonts/: __init__.py  _font_desc.pxd  _font_desc.pyi  _font_desc.pyx  enums.pyi  enums.pyx
manimpango/include/: cairo.pxd  glib.pxd  pango.pxd  pango_attributes.pxd
manimpango/includes/: cairo.pxd  glib.pxd  pango.pxd
manimpango/layout/: __init__.pxd  __init__.py  _layout.pyx  layout.pxi  utils.pxd  utils.pyx
manimpango/renderer/: __init__.py  cairo_utils.pxi  image_renderer.pxd  image_renderer.pyi  image_renderer.pyx  png_renderer.pxd  png_renderer.pyi  png_renderer.pyx  renderer.pxd  renderer.pyx  svg_renderer.pxd  svg_renderer.pyi  svg_renderer.pyx
manimpango/utils/: __init__.py  _cutils.pyx  _list_fonts.pyi  _list_fonts.pyx  _utils.pyi  colours.pxd  colours.pyi  colours.pyx  enums.pyi  enums.pyx  utils.py  utils.pyx
news/: +invalid-font.bugfix.rst  +tarball.misc.rst  28.feature.rst
packing/: Windows.dockerfile  _distributor_init_win.py  build_minimal_windows_image.sh  build_pango.sh  build_pango_mac.sh  build_pango_tests.sh  build_pkgconfig.ps1  cross_file.txt  download_and_extract.py  download_dlls.py  inject-dlls.py  test_wheels.sh  test_windows_wheels.sh
scripts/: build_pango_mac.sh  build_pango_tests.sh  build_pkgconfig.ps1  download_dlls.py  test_wheels.sh
tests/: __init__.py  _manim.py  conftest.py  svg_tester.py  test_attributes.py  test_colors.py  test_font_desc.py  test_font_description.py  test_font_manager.py  test_fonts.py  test_import.py  test_layout.py  test_list_fonts.py  test_markup.py  test_renderer.py  test_utils.py  test_valid_svg.py  test_version.py
tests/fonts/: LICENSE.txt
windll/: LICENSE.win32  download_dlls.py  inject-dlls.py
