[build-system]
build-backend = "setuptools.build_meta"
requires = ["Cython>=0.29.25,<3.0", "setuptools>=59.2.0", "wheel"]

[tool.isort]
# from https://black.readthedocs.io/en/stable/compatible_configs.html
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
